Update DImportKeyPair and JRevokedCerts to handle FileNotFoundException.